Gleb: sudden push

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,3 +16,10 @@
 .container {
     padding: 0 !important;
 }
+
+.pass {
+    fill: antiquewhite;
+}
+.shelf {
+    background-color: aquamarine;
+}
